Version 1.1.1-devel
-------------------
- Add Adam optimizer.
- Add ReLU activation.
  - The created models not supported by older versions.
- Fix dropout implementation.
- Add Xavier initialization.
- Add single_root option.


Version 1.1.0 [04 Jan 2016]
---------------------------
- Implement optional beam search during decoding.


Version 1.0.0 [04 Dec 2015]
---------------------------
- Initial public release.