@@ -6,6 +6,10 @@ Version 1.1.1-devel
 - Fix dropout implementation.
 - Add Xavier initialization.
 - Add single_root option.
+- On Windows, the file paths are now UTF-8 encoded, instead of ANSI.
+  This change affects the API, binary arguments, and program outputs.
+- The Windows binaries are now compiled with VS 2019, older systems
+  than Windows 7 are no longer supported.
 
 
 Version 1.1.0 [04 Jan 2016]
